--- a/web-server/views/about.hbs
+++ b/web-server/views/about.hbs
@@ -4,7 +4,9 @@
         <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
-        <h1>About Page served from static file</h1>
+        <h1>{{title}}</h1>
+        <h3>About Page served from template engine</h3>
         <img src="/img/robot.png">
+        <p>Made by {{name}}</p>
     </body>
 </html>
