--- a/web-server/views/help.hbs
+++ b/web-server/views/help.hbs
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
-        <h1>Help Page served from static file</h1>
+        <h1>Help</h1>
+        <p>{{message}}</p>
     </body>
 </html>
