--- a/web-server/views/index.hbs
+++ b/web-server/views/index.hbs
@@ -5,6 +5,8 @@
         <script src="/js/app.js"></script>
     </head>
     <body>
-        <h1>Hello, I'm served from static file</h1>
+        <h1>{{title}}</h1>
+        <h3>Hello, I'm served from templating engine</h3>
+        <p>Made by {{name}}</p>
     </body>
 </html>
