--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -4,9 +4,9 @@
         <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
-        <h1>{{title}}</h1>
+        {{>header}}
         <h3>About Page served from template engine</h3>
         <img src="/img/robot.png">
-        <p>Made by {{name}}</p>
+        {{>footer}}
     </body>
 </html>
