--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -5,8 +5,8 @@
         <script src="/js/app.js"></script>
     </head>
     <body>
-        <h1>{{title}}</h1>
+        {{>header}}
         <h3>Hello, I'm served from templating engine</h3>
-        <p>Made by {{name}}</p>
+        {{>footer}}
     </body>
 </html>
