--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Weather</title>
+        <link rel="icon" href="/img/weather.png">
         <link rel="stylesheet" href="/css/styles.css">
         <script src="/js/app.js"></script>
     </head>
     <body>
-        {{>header}}
-        <h3>Hello, I'm served from templating engine</h3>
+        <div class="main-content">
+            {{>header}}
+            <h3>Hello, I'm served from templating engine</h3>
+        </div>
+        
         {{>footer}}
     </body>
 </html>
