--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -4,14 +4,19 @@
         <title>Weather</title>
         <link rel="icon" href="/img/weather.png">
         <link rel="stylesheet" href="/css/styles.css">
-        <script src="/js/app.js"></script>
     </head>
     <body>
         <div class="main-content">
             {{>header}}
-            <h3>Hello, I'm served from templating engine</h3>
+            <h3>Search your location and get the weather data back</h3>
+            <form>
+                <input type="text" placeholder="Location">
+                <button>Search</button>
+            </form>
         </div>
         
         {{>footer}}
+
+        <script src="/js/app.js"></script>
     </body>
 </html>
